# readable-color-codes

./: Cargo.toml
benches/: encoding.rs
src/: main.rs
src/encoding/: alphabet.rs  bigint.rs  decoder.rs  encoder.rs  mod.rs
