[package]
name = "readable-color-codes"
version = "0.1.0"
authors = ["Sergey Tolmachev <tolsi.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.19.2"
image = "0.22.2"
rusttype = "0.8.0"
rayon = "1.1"
itertools = "0.8.0"
md5 = "0.6.1"